Updates to home page

--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
                 <div class="col-lg-6">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h1>Building Networks
-                                For People</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna
-                                aliqua. Ut enim ad minim veniam.</p>
-                            <a href="#" class="btn_2">try for free</a>
+                            <h1>Get yourself 
+                                An online Presence
+                            </h1>
+                            <p>We make an online presence for you and your business to take your business to new heights.</p>
+                            <a href="#" class="btn_2">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -123,32 +122,27 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_feature">
                         <div class="single_feature_part">
-                            <img src="img/icon/feature_icon_1.png" alt="">
-                            <h4>Fully Secured</h4>
-                            <p>Made great fish shall beast, fourth land also Doesn
-                                tree without lesser likeness he fruit of called gathering
-                                day whose called were have </p>
+                            <img src="img/icon/new_feature_icon_1.png" alt="">
+                            <h4>Fast and Responsive</h4>
+                            <p>Our websites are quick and responsive so your customers never face a problem ever. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_feature">
                         <div class="single_feature_part">
-                            <img src="img/icon/feature_icon_2.png" alt="">
-                            <h4>Unique Design</h4>
-                            <p>Made great fish shall beast, fourth land also Doesn tree
-                                without lesser likeness he fruit of called gathering day whose
-                                called were have </p>
+                            <img src="img/icon/new_feature_icon_2.png" alt="">
+                            <h4>Great SEO</h4>
+                            <p>Search Engine Optimized websites so that you always stay ahead of your competition even in search results. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_feature">
                         <div class="single_feature_part">
-                            <img src="img/icon/feature_icon_3.png" alt="">
-                            <h4>A Volunteer</h4>
-                            <p>Made great fish shall beast, fourth land also Doesn tree without
-                                lesser likeness he fruit of called gathering day whose called were have </p>
+                            <img src="img/icon/new_feature_icon_3.png" alt="">
+                            <h4>Beautifully designed and customised</h4>
+                            <p>We deliver beautifully designed and customised websites to uniquely cater your client needs. </p>
                         </div>
                     </div>
                 </div>
@@ -160,24 +154,26 @@
 
     <!--::about_us part start::-->
     <section class="about_us section_padding">
+        <h1 class="text-center mb-5"><u>Why Choose Us?</u></h1>
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-6 col-lg-5">
                     <div class="about_us_text">
                         <img src="img/icon/Icon_1.png" alt="">
-                        <h2>Easy To <br>
-                            Access Social Media</h2>
-                        <p>Saw shall light. Us their to place had creepeth day
-                            night great wher appear to. Hath, called, sea called,
-                            gathering wherein open make living Female itself
-                            gathering man. Waters and, two. Bearing. Saw she'd
-                            all let she'd lights abundantly blessed.</p>
+                        <h2>Best in class <br>
+                            Services Provided</h2>
+                        <p>We donot just create an online wesbite for you.<br>
+                            We help you in each step in the way to take your business online
+                            and we provide long term support to all our clients. <br>
+                            We allow
+                            unlimited changes to your website so you are 100% satisfied with our devliered website.
+                        </p>
                         <a href="#" class="btn_2">learn more</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6">
                     <div class="learning_img">
-                        <img src="img/about_img.png" alt="">
+                        <img src="img/about.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -192,19 +188,16 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-6 col-lg-6">
                     <div class="learning_img">
-                        <img src="img/about_img_1.png" alt="">
+                        <img src="img/seo.svg" alt="">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-5">
                     <div class="about_us_text">
                         <img src="img/icon/Icon_2.png" alt="">
-                        <h2>With efficiency to
-                            unlock more opportunities</h2>
-                        <p>Saw shall light. Us their to place had creepeth day
-                            night great wher appear to. Hath, called, sea called,
-                            gathering wherein open make living Female itself
-                            gathering man. Waters and, two. Bearing. Saw she'd
-                            all let she'd lights abundantly blessed.</p>
+                        <h2>We make sure you always stay ahead of your competition.</h2>
+                        <p>Our wesbites are Search Engine Optimzed and we only rest when all our client needs are met 
+                            to make sure we only deliver the best products all our clients.
+                        </p>
                         <a href="#" class="btn_2">learn more</a>
                     </div>
                 </div>
@@ -220,9 +213,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_tittle text-center">
-                        <h2>Simple Pricing</h2>
-                        <p>Life firmament under them evening make after called dont
-                            saying likeness isn't wherein also forth she'd air two without</p>
+                        <h2>Affordable Pricing</h2>
+                        <p>Our prices are very affordable so that you can take your business online without breaking a bank.</p>
                     </div>
                 </div>
             </div>
@@ -230,15 +222,16 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_1.png" alt="">
-                        <p>Standard</p>
-                        <h3>$50.00 <span>/ mo</span></h3>
+                        <p>Welcome Online</p>
+                        <span class="strike pricing">₹12,000</span><span class="pricing">₹8,000</span><br>
+                        <span>This plan gives you a simple yet beautiful website.</span>
                         <ul>
-                            <li>2GB Bandwidth</li>
-                            <li>Two Account</li>
-                            <li>15GB Storage</li>
-                            <li>Sale After Service</li>
-                            <li>3 Host Domain</li>
-                            <li>24/7 Support</li>
+                            <li>Free hosting</li>
+                            <li>Unlimited Changes</li>
+                            <li>Beautifully designed and customized website</li>
+                            <li>3 months free support</li>
+                            <li>3-5 days delivery</li>
+                            <li>Quick support</li>
                         </ul>
                         <a href="#" class="pricing_btn">Purchase Now</a>
                     </div>
