--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>wayve.codes</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/favicon.png" type="image/icon type">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
@@ -33,7 +33,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand main_logo" href="index.html"> <h1 style="color: white;">Wayve.codes</h1></a>
+                        <a class="navbar-brand main_logo" href="index.html"><h1 style="color: white;"><img src="img/watch-1.png" alt="" srcset=""> Wayve.codes</h1></a>
                         <a class="navbar-brand single_page_logo" href="index.html"> <img src="img/footer_logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
