cards added for android

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="#" class="d-none d-sm-block btn_1 home_page_btn">sing up</a>
+                        <a href="mailto:wayve.codes@gmail.com" class="d-none d-sm-block btn_1 home_page_btn">Get Help</a>
                     </nav>
                 </div>
             </div>
@@ -233,9 +233,9 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_1.png" alt="">
-                        <p>Welcome Online</p>
+                        <p>White plan</p>
                         <span class="strike pricing">₹12,000</span><span class="pricing">₹8,000</span><br>
-                        <span>This plan gives you a simple yet beautiful website.</span>
+                        <span>Single Page Application website.</span>
                         <ul>
                             <li>Free hosting</li>
                             <li>Unlimited Changes</li>
@@ -244,30 +244,36 @@
                             <li>3-5 days delivery</li>
                             <li>Quick support</li>
                         </ul>
-                        <a href="#" class="pricing_btn">Purchase Now</a>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
+                            Purchase Now
+                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_2.png" alt="">
-                        <p>Business</p>
-                        <h3>$50.00 <span>/ mo</span></h3>
+                        <p>Grey Plan</p>
+                        <span class="strike pricing">₹20,000</span><span class="pricing">₹15,000</span><br>
+                        <span>Business Website</span>
                         <ul>
-                            <li>2GB Bandwidth</li>
-                            <li>Two Account</li>
-                            <li>15GB Storage</li>
-                            <li>Sale After Service</li>
-                            <li>3 Host Domain</li>
-                            <li>24/7 Support</li>
+                            <li>Free hosting</li>
+                            <li>Unlimited Changes</li>
+                            <li>Beautifully designed and customized website</li>
+                            <li>3 months free support</li>
+                            <li>3-5 days delivery</li>
+                            <li>Quick support</li>
                         </ul>
-                        <a href="#" class="pricing_btn">Purchase Now</a>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Business%20website%20plan.">
+                            Purchase Now
+                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_3.png" alt="">
-                        <p>Premium</p>
-                        <h3>$60.00 <span>/ mo</span></h3>
+                        <p>Dark</p>
+                        <span class="strike pricing">₹20,000</span><span class="pricing">₹15,000</span><br>
+                        <span>E-commerce Website</span>
                         <ul>
                             <li>2GB Bandwidth</li>
                             <li>Two Account</li>
@@ -276,13 +282,15 @@
                             <li>3 Host Domain</li>
                             <li>24/7 Support</li>
                         </ul>
-                        <a href="#" class="pricing_btn">Purchase Now</a>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
+                            Purchase Now
+                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_4.png" alt="">
-                        <p>Ultimate</p>
+                        <p>A</p>
                         <h3>$80.00 <span>/ mo</span></h3>
                         <ul>
                             <li>2GB Bandwidth</li>
@@ -292,7 +300,45 @@
                             <li>3 Host Domain</li>
                             <li>24/7 Support</li>
                         </ul>
-                        <a href="#" class="pricing_btn">Purchase Now</a>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
+                            Purchase Now
+                         </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single_pricing_part">
+                        <img src="img/icon/pricing_icon_4.png" alt="">
+                        <p>A</p>
+                        <h3>$80.00 <span>/ mo</span></h3>
+                        <ul>
+                            <li>2GB Bandwidth</li>
+                            <li>Two Account</li>
+                            <li>15GB Storage</li>
+                            <li>Sale After Service</li>
+                            <li>3 Host Domain</li>
+                            <li>24/7 Support</li>
+                        </ul>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
+                            Purchase Now
+                         </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="single_pricing_part">
+                        <img src="img/icon/pricing_icon_4.png" alt="">
+                        <p>A</p>
+                        <h3>$80.00 <span>/ mo</span></h3>
+                        <ul>
+                            <li>2GB Bandwidth</li>
+                            <li>Two Account</li>
+                            <li>15GB Storage</li>
+                            <li>Sale After Service</li>
+                            <li>3 Host Domain</li>
+                            <li>24/7 Support</li>
+                        </ul>
+                        <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
+                            Purchase Now
+                         </a>
                     </div>
                 </div>
             </div>
