--- a/blog.html
+++ b/blog.html
@@ -443,7 +443,7 @@
                 <div class="row">
                     <div class="col-sm-8 col-md-4 col-lg-4">
                         <div class="single_footer_part">
-                            <a href="index.html" class="footer_logo_iner"> <img src="img/footer_logo.png" alt="#"> </a>
+                            <a href="index.html" class="footer_logo_iner"> <img src="img/footer_logo.svg" alt="#"> </a>
                             <p>Gathered. Under is whose you'll to make years is mat lights thing together fish made
                                 forth thirds cattle behold won't. Fourth creeping first female.
                             </p>
