--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand main_logo" href="index.html"><h1 style="color: white;"><img src="img/watch-1.png" alt="" srcset=""> Wayve.codes</h1></a>
-                        <a class="navbar-brand single_page_logo" href="index.html"> <img src="img/footer_logo.png" alt="logo"> </a>
+                        <a class="navbar-brand single_page_logo" href="index.html"> <img src="img/footer_logo.svg" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -57,9 +57,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="features.html">features</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="pricing.html">pricing</a>
                                 </li>
@@ -256,12 +256,12 @@
                         <span class="strike pricing">₹20,000</span><span class="pricing">₹15,000</span><br>
                         <span>Business Website</span>
                         <ul>
-                            <li>Free hosting</li>
-                            <li>Unlimited Changes</li>
+                            <li>Professional Multi-Page website</li>
+                            <li>Ideal for dynamic websites</li>
                             <li>Beautifully designed and customized website</li>
-                            <li>3 months free support</li>
-                            <li>3-5 days delivery</li>
-                            <li>Quick support</li>
+                            <li>6 months free support</li>
+                            <li>5-7 days delivery</li>
+                            <li>Quick premium support</li>
                         </ul>
                         <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Business%20website%20plan.">
                             Purchase Now
@@ -275,12 +275,12 @@
                         <span class="strike pricing">₹20,000</span><span class="pricing">₹15,000</span><br>
                         <span>E-commerce Website</span>
                         <ul>
-                            <li>2GB Bandwidth</li>
-                            <li>Two Account</li>
-                            <li>15GB Storage</li>
-                            <li>Sale After Service</li>
-                            <li>3 Host Domain</li>
-                            <li>24/7 Support</li>
+                            <li>Sell products online with ease</li>
+                            <li>Accept online payments</li>
+                            <li>Beautifully designed and customized website</li>
+                            <li>6 months free support</li>
+                            <li>7-14 days delivery</li>
+                            <li>Quick premium support</li>
                         </ul>
                         <a class="pricing_btn" href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20application%20plan.">
                             Purchase Now
@@ -413,7 +413,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <div class="subscribe_btn">
-                                            <div class="btn_2 d-block">free trail</div>
+                                            <div class="btn_2 d-block">subscribe</div>
                                         </div>
                                     </div>
                                 </div>
@@ -467,9 +467,8 @@
             <div class="row">
                 <div class="col-sm-8 col-md-4 col-lg-4">
                     <div class="single_footer_part">
-                        <a href="index.html" class="footer_logo_iner"> <img src="img/footer_logo.png" alt="#"> </a>
-                        <p>Gathered. Under is whose you'll to make years is mat lights thing together fish made
-                            forth thirds cattle behold won't. Fourth creeping first female.
+                        <a href="index.html" class="footer_logo_iner"> <img src="img/footer_logo.svg" alt="#"> </a>
+                        <p>Make an online presence for you and your business to take your business to new heights.
                         </p>
                     </div>
                 </div>
