--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Landerz &mdash; Website by Colorlib</title>
+    <title>wayve.codes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -42,7 +42,7 @@
     <div class="container d-none d-lg-block">
       <div class="row">
         <div class="col-12 text-center mb-4 mt-5">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Landerz<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wayve.codes<span class="text-primary">.</span> </a></h1>
           </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-md-6 col-xl-2  d-block d-lg-none">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Landerz<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" >wayve.codes<span class="text-primary">.</span> </a></h1>
           </div>
 
           <div class="col-12 col-md-10 main-menu">
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Features</h2>
+            <h2 class="section-title mb-3">What we do?</h2>
           </div>
         </div>
         <div class="row align-items-stretch">
@@ -119,8 +119,8 @@
                 <span class="icon-wrap"><span class="text-primary icon-autorenew"></span></span>
               </div>
               <div>
-                <h3>Business Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <h3>Single Page website</h3>
+                <p>In this we create a lit looking introductory website according to your need.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -133,8 +133,8 @@
                 <span class="icon-wrap"><span class="text-primary icon-store_mall_directory"></span></span>
               </div>
               <div>
-                <h3>Market Analysis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <h3>Business Websites</h3>
+                <p>In this we create fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
