--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col-12 col-md-10 main-menu">
-            <nav class="site-navigation position-relative text-right" role="navigation">
+            <nav class="site-navigation position-relative text-right nav-font" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
