--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
     <div class="container d-none d-lg-block">
       <div class="row">
-        <div class="col-12 text-center mb-4 mt-5">
+        <div class="col-12 text-center mb-4 mt-4">
             <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wayve.codes<span class="text-primary">.</span> </a></h1>
           </div>
       </div>
@@ -88,8 +88,8 @@
 
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
-                <h1>Grow Your Business Faster</h1>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam assumenda ea quo cupiditate facere deleniti fuga officia.</p>
+                <h1>Get yourself an online presence.</h1>
+                <p class="mb-5">We make an online presence for you and your business to take your business to new heights.</p>
                 <div>
                   <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>
                 </div>
@@ -120,7 +120,7 @@
               </div>
               <div>
                 <h3>Single Page website</h3>
-                <p>In this we create a lit looking introductory website according to your need.</p>
+                <p>In this we create a lit looking introductory website catering all your needs.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -134,7 +134,7 @@
               </div>
               <div>
                 <h3>Business Websites</h3>
-                <p>In this we create fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
+                <p>Get a fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -145,8 +145,8 @@
                 <span class="icon-wrap"><span class="text-primary icon-shopping_basket"></span></span>
               </div>
               <div>
-                <h3>User Monitoring</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <h3>Ecommerce Websites</h3>
+                <p>You will get a beautifully looking and fully featured ecommerce website with full integration of online payments.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -205,7 +205,7 @@
             <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Create interactive prototypes</h2>
+            <h2 class="text-black">Create interactive protexotypes</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
             <ul class="ul-check mb-5 list-unstyled success">
               <li>Adipisci excepturi aliquam</li>
@@ -269,8 +269,8 @@
             <img src="images/about_1.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
-            <h2 class="text-black mb-4">Create interactive prototypes</h2>
-            <p class="mb-4">Eos cumque optio dolores excepturi rerum temporibus magni recusandae eveniet, totam omnis consectetur maxime quibusdam expedita dolorem dolor nobis dicta labore quaerat esse magnam unde, aperiam delectus! At maiores, itaque.</p>
+            <h2 class="text-black mb-4">Create interactive experiences</h2>
+            <p class="mb-4">We at wayve.codes are obsessed with custome satisfaction and we only deliver the best </p>
             <p><a href="#" class="btn btn-primary">Learn More</a></p>
           </div>
         </div>
