--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
     <div class="container d-none d-lg-block">
       <div class="row">
-        <div class="col-12 text-center mb-4 mt-4">
+        <div class="col-12 text-center mb-4 mt-5">
             <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wayve.codes<span class="text-primary">.</span> </a></h1>
           </div>
       </div>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="col-12 col-md-10 main-menu">
-            <nav class="site-navigation position-relative text-right nav-font" role="navigation">
+            <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
@@ -88,8 +88,8 @@
 
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
-                <h1>Get yourself an online presence.</h1>
-                <p class="mb-5">We make an online presence for you and your business to take your business to new heights.</p>
+                <h1>Grow Your Business Faster</h1>
+                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam assumenda ea quo cupiditate facere deleniti fuga officia.</p>
                 <div>
                   <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>
                 </div>
@@ -120,7 +120,7 @@
               </div>
               <div>
                 <h3>Single Page website</h3>
-                <p>In this we create a lit looking introductory website catering all your needs.</p>
+                <p>In this we create a lit looking introductory website according to your need.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -134,7 +134,7 @@
               </div>
               <div>
                 <h3>Business Websites</h3>
-                <p>Get a fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
+                <p>In this we create fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -145,8 +145,8 @@
                 <span class="icon-wrap"><span class="text-primary icon-shopping_basket"></span></span>
               </div>
               <div>
-                <h3>Ecommerce Websites</h3>
-                <p>You will get a beautifully looking and fully featured ecommerce website with full integration of online payments.</p>
+                <h3>User Monitoring</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -205,7 +205,7 @@
             <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Create interactive protexotypes</h2>
+            <h2 class="text-black">Create interactive prototypes</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
             <ul class="ul-check mb-5 list-unstyled success">
               <li>Adipisci excepturi aliquam</li>
@@ -269,8 +269,8 @@
             <img src="images/about_1.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
-            <h2 class="text-black mb-4">Create interactive experiences</h2>
-            <p class="mb-4">We at wayve.codes are obsessed with custome satisfaction and we only deliver the best </p>
+            <h2 class="text-black mb-4">Create interactive prototypes</h2>
+            <p class="mb-4">Eos cumque optio dolores excepturi rerum temporibus magni recusandae eveniet, totam omnis consectetur maxime quibusdam expedita dolorem dolor nobis dicta labore quaerat esse magnam unde, aperiam delectus! At maiores, itaque.</p>
             <p><a href="#" class="btn btn-primary">Learn More</a></p>
           </div>
         </div>
@@ -471,9 +471,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              
             </p>
           </div>
         </div>
