--- a/index.html
+++ b/index.html
@@ -555,36 +555,36 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Blog Posts</h2>
+            <h2 class="section-title mb-3">OUR WORK</h2>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_1.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <img src="images/Rangsaaz.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Rangsaaz2.0</a></h2>
+              <div class="meta mb-4">Jayshree <span class="mx-2">&bullet;</span> March, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <p>Have created website for a cultural event commonly known as RANGSAAZ which was going to happen in Delhi haat</p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div> 
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <img src="images/collcart.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Collcart</a></h2>
+              <div class="meta mb-4">Ayush <span class="mx-2">&bullet;</span> Sep, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <p>A merchandise website for college society.</p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <img src="images/kruma-fix.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Kuruma-fx</a></h2>
+              <div class="meta mb-4">Tech-fanatics <span class="mx-2">&bullet;</span> April, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <p>We have made website for car designing company.</p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div> 
           </div>
           
