Redone initial changes that were overwritten

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
           </div>
 
           <div class="col-12 col-md-10 main-menu">
-            <nav class="site-navigation position-relative text-right" role="navigation">
+            <nav class="site-navigation position-relative text-right nav-font" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#features-section" class="nav-link">Features</a></li>
+                <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
                 <li><a href="#about-section" class="nav-link">About Us</a></li>
                 <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
@@ -88,8 +89,8 @@
 
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
-                <h1>Grow Your Business Faster</h1>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam assumenda ea quo cupiditate facere deleniti fuga officia.</p>
+                <h1>Get yourself an online presence.</h1>
+                <p class="mb-5">We make an online presence for you and your business to take your business to new heights.</p>
                 <div>
                   <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>
                 </div>
@@ -134,7 +135,7 @@
               </div>
               <div>
                 <h3>Business Websites</h3>
-                <p>In this we create fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
+                <p>Get a fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -145,8 +146,8 @@
                 <span class="icon-wrap"><span class="text-primary icon-shopping_basket"></span></span>
               </div>
               <div>
-                <h3>User Monitoring</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <h3>Ecommerce Websites</h3>
+                <p>You will get a beautifully looking and fully featured ecommerce website with full integration of online payments.</p>
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
@@ -469,8 +470,8 @@
             <img src="images/about_1.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
-            <h2 class="text-black mb-4">Create interactive prototypes</h2>
-            <p class="mb-4">Eos cumque optio dolores excepturi rerum temporibus magni recusandae eveniet, totam omnis consectetur maxime quibusdam expedita dolorem dolor nobis dicta labore quaerat esse magnam unde, aperiam delectus! At maiores, itaque.</p>
+            <h2 class="text-black mb-4">Create interactive experiences</h2>
+            <p class="mb-4">We at wayve.codes are obsessed with customer satisfaction and we only deliver the best.</p>
             <p><a href="#" class="btn btn-primary">Learn More</a></p>
           </div>
         </div>
