whatsapp link added

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div>
                 <h3>Single Page website</h3>
                 <p>In this we create a lit looking introductory website according to your need.</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20website%20plan."></a>Purchase now</a></p>
               </div>
             </div>
 
@@ -136,7 +136,7 @@
               <div>
                 <h3>Business Websites</h3>
                 <p>Get a fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Business%20website%20plan."></a>Purchase now</a></p>
               </div>
             </div>
           </div>
@@ -148,7 +148,8 @@
               <div>
                 <h3>Ecommerce Websites</h3>
                 <p>You will get a beautifully looking and fully featured ecommerce website with full integration of online payments.</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Ecommerce%20page%20website%20plan."></a>Purchase now</a></p>
+
               </div>
             </div>
           </div>
