--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-none d-lg-block">
       <div class="row">
         <div class="col-12 text-center mb-4 mt-5">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wayve.codes<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><strong>wayve.codes</strong> <span class="text-primary">.</span> </a></h1>
           </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
               <div>
                 <h3>Single Page website</h3>
                 <p>In this we create a lit looking introductory website according to your need.</p>
-                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20website%20plan."></a>Purchase now</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Single%20page%20website%20plan.">Purchase now</a></p>
               </div>
             </div>
 
@@ -136,7 +136,7 @@
               <div>
                 <h3>Business Websites</h3>
                 <p>Get a fully dyanamic website in which your users can have multiple contact access to reach you with ease</p>
-                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Business%20website%20plan."></a>Purchase now</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Business%20website%20plan.">Purchase now</a></p>
               </div>
             </div>
           </div>
@@ -148,13 +148,13 @@
               <div>
                 <h3>Ecommerce Websites</h3>
                 <p>You will get a beautifully looking and fully featured ecommerce website with full integration of online payments.</p>
-                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Ecommerce%20page%20website%20plan."></a>Purchase now</a></p>
-
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Ecommerce%20page%20website%20plan.">Purchase now</a></p>
+                
               </div>
             </div>
           </div>
 
-
+<!-- 
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-block">
               <div class="unit-4-icon mb-3">
@@ -163,7 +163,7 @@
               <div>
                 <h3>Insurance Consulting</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <p><a href="https://wa.me/919599103808?text=Hello%20wayve.codes%21%20I%20am%20interested%20in%20purchasing%20Ecommerce%20page%20website%20plan">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
                 <p><a href="#">Learn More</a></p>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -207,8 +207,8 @@
             <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Create interactive prototypes</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
+            <h2 class="text-black">Get an excellent UI website</h2>
+            <p class="mb-4">wayve.codes provides every single detailing , so that you user/client will get more connected to you.</p>
             <ul class="ul-check mb-5 list-unstyled success">
               <li>Adipisci excepturi aliquam</li>
               <li>Deleniti labore reiciendis</li>
